tests/typecheck/should_fail/T24298.stderr
T24298.hs:4:16: error: [GHC-18872]
    • Couldn't match a lifted type with an unlifted type
      When matching types
        t0 :: *
        GHC.Internal.Prim.Int# :: TYPE GHC.Internal.Types.IntRep
    • In the expression: 4#
      In the expression: let ?foo = 4# in True
      In an equation for ‘f’: f = let ?foo = 4# in True

